--- a/vite/index.html
+++ b/vite/index.html
@@ -1,10 +1,28 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <!-- Ensure browsers render UI controls in dark and avoid initial white paint -->
+    <meta name="color-scheme" content="dark" />
+    <meta name="theme-color" content="#000000" />
+    <style>
+      /* Pre-paint safeguard: if CSS/JS is delayed, keep background dark */
+      html,
+      body {
+        background: #000;
+        color: #fff;
+      }
+    </style>
+    <title>Runner</title>
+    <script>
+      // Pre-hydration: persist dark mode regardless of OS preference
+      try {
+        const theme = localStorage.getItem("theme") || "dark";
+        if (theme === "dark") document.documentElement.classList.add("dark");
+      } catch {}
+    </script>
   </head>
   <body>
     <div id="root"></div>
