--- a/vite/index.html
+++ b/vite/index.html
@@ -7,6 +7,17 @@
     <!-- Ensure browsers render UI controls in dark and avoid initial white paint -->
     <meta name="color-scheme" content="dark" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Runner is a TypeScript-first framework with simple DI, tasks, resources, events, and middleware." />
+    <meta property="og:site_name" content="Runner" />
+    <meta property="og:title" content="Runner — TypeScript-first DI framework" />
+    <meta property="og:description" content="Build production-ready TypeScript apps with tasks, resources, events, and middleware. No magic, full type-safety." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/og/runner-og.svg" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <link rel="icon" href="/vite.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <style>
       /* Pre-paint safeguard: if CSS/JS is delayed, keep background dark */
       html,
