feat: Enhance HomePage with author quotes and interactive features
- Added a collection of humorous author quotes displayed in a testimonial card.
- Implemented navigation buttons for cycling through quotes.
- Introduced random quote selection functionality.
- Updated feature descriptions and examples for clarity and consistency.
- Improved layout and styling for better responsiveness and visual appeal.

refactor: Update PlaygroundPage for improved user experience

- Added scrolling functionality to navigate to code and output sections on mobile.
- Enhanced button interactions for running code and clearing output.
- Improved layout and styling for better usability and aesthetics.

style: Revamp QuickStartPage header for consistency

- Updated header styling to match the new design language.
- Enhanced text visibility and layout for a more engaging user experience.

--- a/web/index.html
+++ b/web/index.html
@@ -2,7 +2,7 @@
 <html lang="en" class="dark">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg?v=3" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Ensure browsers render UI controls in dark and avoid initial white paint -->
     <meta name="color-scheme" content="dark" />
@@ -15,7 +15,7 @@
     <meta property="og:image" content="/og/runner-og.svg" />
     <meta name="twitter:card" content="summary_large_image" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="icon" href="/vite.svg" />
+    <link rel="icon" href="/favicon.svg?v=3" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <style>
