--- a/web/index.html
+++ b/web/index.html
@@ -7,10 +7,19 @@
     <!-- Ensure browsers render UI controls in dark and avoid initial white paint -->
     <meta name="color-scheme" content="dark" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Runner is a TypeScript-first framework with simple DI, tasks, resources, events, and middleware." />
+    <meta
+      name="description"
+      content="Runner is a TypeScript-first framework with simple DI, tasks, resources, events, and middleware."
+    />
     <meta property="og:site_name" content="Runner" />
-    <meta property="og:title" content="Runner — TypeScript-first DI framework" />
-    <meta property="og:description" content="Build production-ready TypeScript apps with tasks, resources, events, and middleware. No magic, full type-safety." />
+    <meta
+      property="og:title"
+      content="Runner — TypeScript-first DI framework"
+    />
+    <meta
+      property="og:description"
+      content="Build production-ready TypeScript apps with tasks, resources, events, and middleware. No magic, full type-safety."
+    />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="/og/runner-og.svg" />
     <meta name="twitter:card" content="summary_large_image" />
@@ -18,6 +27,20 @@
     <link rel="icon" href="/favicon.svg?v=3" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-TRRM2KSZKE"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-TRRM2KSZKE");
+    </script>
     <style>
       /* Pre-paint safeguard: if CSS/JS is delayed, keep background dark */
       html,
